// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReduxFormKeyValueList /> should render when there is no input - initial reder 1`] = `
<Grid
  hasGutter={true}
>
  <GridItem
    className="pf-c-form__label pf-c-form__label-text"
    span={4}
  >
    Key
  </GridItem>
  <GridItem
    className="pf-c-form__label pf-c-form__label-text"
    span={4}
  >
    Value
  </GridItem>
  <GridItem
    span={4}
  />
  <GridItem
    span={4}
  >
    <Field
      component={[Function]}
      index={0}
      name="[object Object].key"
      type="text"
      validate={[Function]}
    />
  </GridItem>
  <GridItem
    span={4}
  >
    <Field
      component={[Function]}
      index={0}
      name="[object Object].value"
      type="text"
      validate={[Function]}
    />
  </GridItem>
  <GridItem
    span={4}
  >
    <Button
      className="reduxFormKeyValueList-removeBtn-disabled"
      icon={
        <MinusCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
      isDisabled={true}
      onClick={[Function]}
      variant="link"
    />
  </GridItem>
  <GridItem>
    <ButtonWithTooltip
      className="reduxFormKeyValueList-addBtn"
      disableReason={[Function]}
      icon={
        <PlusCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
      isInline={true}
      onClick={[Function]}
      variant="link"
    >
      Add additional label
    </ButtonWithTooltip>
  </GridItem>
</Grid>
`;

exports[`<ReduxFormKeyValueList /> should render with input 1`] = `
<Grid
  hasGutter={true}
>
  <GridItem
    className="pf-c-form__label pf-c-form__label-text"
    span={4}
  >
    Key
  </GridItem>
  <GridItem
    className="pf-c-form__label pf-c-form__label-text"
    span={4}
  >
    Value
  </GridItem>
  <GridItem
    span={4}
  />
  <GridItem
    span={4}
  >
    <Field
      component={[Function]}
      index={0}
      name="[object Object].key"
      type="text"
      validate={[Function]}
    />
  </GridItem>
  <GridItem
    span={4}
  >
    <Field
      component={[Function]}
      index={0}
      name="[object Object].value"
      type="text"
      validate={[Function]}
    />
  </GridItem>
  <GridItem
    span={4}
  >
    <Button
      className="reduxFormKeyValueList-removeBtn"
      icon={
        <MinusCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
      isDisabled={false}
      onClick={[Function]}
      variant="link"
    />
  </GridItem>
  <GridItem
    span={4}
  >
    <Field
      component={[Function]}
      index={1}
      name="[object Object].key"
      type="text"
      validate={[Function]}
    />
  </GridItem>
  <GridItem
    span={4}
  >
    <Field
      component={[Function]}
      index={1}
      name="[object Object].value"
      type="text"
      validate={[Function]}
    />
  </GridItem>
  <GridItem
    span={4}
  >
    <Button
      className="reduxFormKeyValueList-removeBtn"
      icon={
        <MinusCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
      isDisabled={false}
      onClick={[Function]}
      variant="link"
    />
  </GridItem>
  <GridItem>
    <ButtonWithTooltip
      className="reduxFormKeyValueList-addBtn"
      disableReason={[Function]}
      icon={
        <PlusCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
      isInline={true}
      onClick={[Function]}
      variant="link"
    >
      Add additional label
    </ButtonWithTooltip>
  </GridItem>
</Grid>
`;
